<resources>
    <string name="app_name">AndroidTemplate</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="section">Section</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="undo">Undo</string>
    <string name="no_data">No Data</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="if_you_dont_have_ac_account">If you don\'t have an account</string>
    <string name="create_new_account">Create new Account</string>
</resources>
