<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding_big"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding"
        android:text="Please Login"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/view_padding_bigger"
            android:layout_height="@dimen/view_padding_bigger"
            android:layout_marginBottom="@dimen/view_padding_small"
            android:layout_marginRight="@dimen/view_padding_small"
            android:src="@drawable/ic_email"
            android:tint="@color/disable_text_dark" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/view_padding_bigger"
            android:layout_height="@dimen/view_padding_bigger"
            android:layout_marginBottom="@dimen/view_padding_small"
            android:layout_marginRight="@dimen/view_padding_small"
            android:src="@drawable/ic_password"
            android:tint="@color/disable_text_dark" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding">

            <EditText
                android:id="@+id/inpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/primary_dark"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/if_you_dont_have_ac_account"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/btnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding_small"
        android:clickable="true"
        android:text="@string/create_new_account"
        android:textColor="@color/accentColor" />

</LinearLayout>